# datashare-tarentula

./: .dockerignore  .gitignore  COOKBOOK.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  pylintrc  pyproject.toml  setup.py  tarentula_documents.csv
.circleci/: config.yml
tarentula/: aggreagate.py  aggregate.py  cli.py  command.py  config_file_reader.py  count.py  datashare_client.py  download.py  export_by_query.py  graph_realtime.py  logger.py  metadata_fields.py  tag_cleaning_by_query.py  tagging.py  tagging_by_query.py
tests/: docker-compose.yml  test_abstract.py  test_aggregate.py  test_apikey.py  test_config_file_reader.py  test_count.py  test_datashare_client.py  test_download.py  test_export_by_query.py  test_graph_realtime.py  test_metadata_fields.py  test_metadata_fields_multi_filter.py  test_tag_cleaning_by_query.py  test_tagging.py  test_tagging_by_query.py  test_version.py
tests/fixtures/: luxleaks-sample.json  luxleaks_test_aggs_sum_contentlength_all.json  luxleaks_test_aggs_sum_contentlength_filter1.json  match_all_query.json  species.json  species_test_aggs_count_response_1.json  species_test_aggs_count_response_2.json  species_test_aggs_nunique_contenttype.json  species_test_aggs_nunique_response_1.json  species_test_aggs_response_2.json  tags-by-content-type.json  tags-with-document-id.csv  tags-with-document-url.csv  tags.csv  tarentula.ini
