[tool.poetry]
name = "tarentula"
version = "4.3.2"
description = ""
authors = ["ICIJ <engineering@icij.org>"]
readme = "README.md"
packages = [{include = "tarentula"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
click = "==7.1.2"
requests = "==2.25.1"
coloredlogs = "==14.0"
rich = "==12"

[tool.poetry.group.dev.dependencies]
responses = "==0.12.0"
pyyaml = "==5.4.0"
argh = "==0.26.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tarentula = "tarentula.cli:cli"
