[tool.poetry]
name = "tarentula"
version = "4.3.4"
description = ""
authors = ["ICIJ <engineering@icij.org>"]
readme = "README.md"
packages = [{include = "tarentula"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1"
requests = "^2.28"
coloredlogs = "==14.0"
rich = "^12"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
responses = "^0.22"
argh = "==0.26.2"
pytest = "^7.2.0"
matplotlib = "^3.6"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tarentula = "tarentula.cli:cli"
